--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <!-- Bootstrap Style sheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="shortcut icon" href="img/fav1.png" type="image/x-icon">
+    <!-- ----Font awesome icon--- -->
+    <script src="https://kit.fontawesome.com/846d4878cc.js" crossorigin="anonymous"></script>
     <!--------- CSS---------->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -102,38 +104,79 @@
 <!--+++++++++++++++++++++++Product Catagories START+++++++++++++++++++++++++++++ -->
    <section class="container my-5">
        <div class="row g-4">
-            <div class="col-lg-4">
-               <div class=" border bg-warning d-flex align-items-center rounded-3">
-                   <h1 class="text-white col-lg-8 ps-5" >Watch</h1>
-                   <img class=" col-lg-4" src="img/images/categories/watch.png" alt="">
+            <div class="col-lg-4 col-md-6 col-12">
+               <div class=" border bg-warning d-flex align-items-center justify-content-between p-3  rounded-3">
+                   <h1 class="text-white" >Watch</h1>
+                   <img class="" src="img/images/categories/watch.png" alt="">
                </div>
             </div>
-            <div class="col-lg-4 ">
-               <div class=" border bg-success d-flex align-items-center rounded-3">
-                   <h1 class="text-white col-lg-8 ps-5" >Bags</h1>
-                   <img class=" col-lg-4" src="img/images/categories/bag.png" alt="">
+            <div class="col-lg-4 col-md-6 col-12">
+               <div class=" border bg-success d-flex align-items-center justify-content-between p-3  rounded-3">
+                   <h1 class="text-white " >Bags</h1>
+                   <img class=" " src="img/images/categories/bag.png" alt="">
                </div>
             </div>
-            <div class="col-lg-4 ">
-            <div class=" border bg-primary d-flex align-items-center rounded-3">
-                   <h1 class="text-white col-lg-8 ps-5" >Shoes</h1>
-                   <img class=" col-lg-4" src="img/images/categories/shoes.png" alt="">
+            <div class="col-lg-4 col-md-6 col-12">
+            <div class=" border bg-primary d-flex align-items-center justify-content-between p-3 rounded-3">
+                   <h1 class="text-white " >Shoes</h1>
+                   <img class=" " src="img/images/categories/shoes.png" alt="">
                </div>
             </div>
             
         </div>
 
    </section>
-
-
-
-
-
-
-
-
 <!--+++++++++++++++++++++++Product Catagories END+++++++++++++++++++++++++++++ -->
 
+
+
+<!--+++++++++++++++++++++++Products card section START+++++++++++++++++++++++++++++ -->
+
+<section class="container">
+    <h2 class="my-2">Shoes</h2>
+  <div class="row row-cols-1 row-cols-md-3 g-4">
+  <div class="col">
+    <div class="card h-100 border-0 shadow-lg">
+      <img src="img/images/shoes/shoe-1.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Supply 350</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+      </div>
+      <div>
+       <button class="btn btn-warning m-3">Buy Now</button>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card h-100 border-0 shadow-lg">
+      <img src="img/images/shoes/shoe-2.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Nike 360</h5>
+        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      </div>
+      <div>
+        <button class="btn btn-warning m-3">Buy Now</button>
+      </div>
+    </div>
+  </div>
+  <div class="col ">
+    <div class="card h-100 border-0 shadow-lg">
+      <img src="img/images/shoes/shoe-3.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Red Airmax</h5>
+        <p class="card-text"> This is a wider card with supporting text below as a natural lead-in to additional.</p>
+      </div>
+      <div >
+        <button class="btn btn-warning m-3">Buy Now</button>
+      </div>
+    </div>
+  </div>
+</div>
+</section>
+
+
+
+<!--+++++++++++++++++++++++Products card section END+++++++++++++++++++++++++++++ -->
   </main>
 <!--++++++++++++++++++++++++++ Footer START+++++++++++++++++++++++++++++ -->
   <footer>
