--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Panda Commerce</title>
     <!-- Bootstrap Style sheet -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- Favicon -->
     <link rel="shortcut icon" href="img/fav1.png" type="image/x-icon">
     <!-- ----Font awesome icon--- -->
     <script src="https://kit.fontawesome.com/846d4878cc.js" crossorigin="anonymous"></script>
@@ -16,8 +17,8 @@
 <body>
 <!--++++++++++++++++++++++++++ Header START+++++++++++++++++++++++++++++ -->
   <header>
-   <div class="container">
-          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+   <div class="container mb-5 pb-5 fixed-top ">
+          <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
   <div class="container">
     <a class="navbar-brand" href="#"><img src="img/images/logo.png" alt=""></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,13 +30,13 @@
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Shoes</a>
+          <a class="nav-link" href="#Shoes">Shoes</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Backpacks</a>
+          <a class="nav-link" href="#Backpacks">Backpacks</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Suscribe</a>
+          <a class="nav-link" href="#Suscribe">Suscribe</a>
         </li>
    
         
@@ -46,40 +47,40 @@
 </nav>
    </div>
 <!--+++++++++++++++++++++Image Slider START+++++++++++++++++-->
-<section class="container ">
-    <div id="carouselExampleControls" class="carousel slide " data-bs-ride="carousel">
+<section class="container  ">
+    <div id="carouselExampleControls" class="carousel slide py-5 " data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-        <div class="row d-flex align-items-center bg-info bg-gradient border p-5 rounded ">
+        <div class="row d-flex align-items-center slider-bg  bg-gradient border p-5 ">
             <div class="col-lg-7">
                 <h1>Cool Dude Headphone</h1>
                 <p>This is the best headphone in the world for people who just want to waste time in front of funky world.</p>
                 <h1>$420</h1>
-                <button class="btn btn-warning">Buy Now</button>
+                <button class="panda-buying-btn">Buy Now</button>
             </div>
             <div class="col-lg-5"> <img src="img/images/banner-images/headphone.png" class="d-block w-100" alt="..."></div>
         </div>
     </div>
 
     <div class="carousel-item">
-     <div class="row d-flex align-items-center bg-info bg-gradient border p-5 rounded ">
+     <div class="row d-flex align-items-center  slider-bg bg-gradient border p-5">
             <div class="col-lg-7">
                 <h1>X-Box for your living room</h1>
                 <p>This is the best x-box in the world for people who just want to waste time in front of fake sports.</p>
                 <h1>$600</h1>
-                <button class="btn btn-warning">Buy Now</button>
+                <button class="panda-buying-btn">Buy Now</button>
             </div>
             <div class="col-lg-5"> <img src="img/images/banner-images/xbox.png" class="d-block w-100" alt="..."></div>
         </div>
     </div>
 
     <div class="carousel-item">
-     <div class="row d-flex align-items-center bg-info bg-gradient border p-5 rounded ">
+     <div class="row d-flex align-items-center  slider-bg bg-gradient border p-5">
             <div class="col-lg-7">
                 <h1>Mega LCD TV For Sports</h1>
                 <p>This is the best tv in the world for people who just want to waste time in front of tv.</p>
                 <h1>$1200</h1>
-                <button class="btn btn-warning">Buy Now</button>
+                <button class="panda-buying-btn">Buy Now</button>
             </div>
             <div class="col-lg-5"> <img src="img/images/banner-images/tv.png" class="d-block w-100" alt="..."></div>
         </div>
@@ -102,22 +103,22 @@
   <main>
 
 <!--+++++++++++++++++++++++Product Catagories START+++++++++++++++++++++++++++++ -->
-   <section class="container my-5">
+   <section class="container my-5 catagories">
        <div class="row g-4">
             <div class="col-lg-4 col-md-6 col-12">
-               <div class=" border bg-warning d-flex align-items-center justify-content-between p-3  rounded-3">
+               <div class=" border watch-bg d-flex align-items-center justify-content-between p-3  rounded-3">
                    <h1 class="text-white" >Watch</h1>
                    <img class="" src="img/images/categories/watch.png" alt="">
                </div>
             </div>
             <div class="col-lg-4 col-md-6 col-12">
-               <div class=" border bg-success d-flex align-items-center justify-content-between p-3  rounded-3">
+               <div class=" border bag-bg d-flex align-items-center justify-content-between p-3  rounded-3">
                    <h1 class="text-white " >Bags</h1>
                    <img class=" " src="img/images/categories/bag.png" alt="">
                </div>
             </div>
             <div class="col-lg-4 col-md-6 col-12">
-            <div class=" border bg-primary d-flex align-items-center justify-content-between p-3 rounded-3">
+            <div class=" border shoes-bg d-flex align-items-center justify-content-between p-3 rounded-3">
                    <h1 class="text-white " >Shoes</h1>
                    <img class=" " src="img/images/categories/shoes.png" alt="">
                </div>
@@ -130,11 +131,15 @@
 
 
 
-<!--+++++++++++++++++++++++Products card section START+++++++++++++++++++++++++++++ -->
+<!--+++++++++++++++++++++++Products card section START+++++++++++++++++++++++++++++ 
++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
 
-<section class="container">
+
+ 
+<!--+++++++++++++++++++++++Shoes START+++++++++++++++++++++++++++++ -->
+<section class="container my-5 py-5" id="Shoes">
     <h2 class="my-2">Shoes</h2>
-  <div class="row row-cols-1 row-cols-md-3 g-4">
+  <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
   <div class="col">
     <div class="card h-100 border-0 shadow-lg">
       <img src="img/images/shoes/shoe-1.png" class="card-img-top" alt="...">
@@ -143,11 +148,11 @@
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
       </div>
       <div>
-       <button class="btn btn-warning m-3">Buy Now</button>
+       <button class="panda-buying-btn m-3">Buy Now</button>
       </div>
     </div>
   </div>
-  <div class="col">
+  <div class="col ">
     <div class="card h-100 border-0 shadow-lg">
       <img src="img/images/shoes/shoe-2.png" class="card-img-top" alt="...">
       <div class="card-body">
@@ -155,7 +160,7 @@
         <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
       </div>
       <div>
-        <button class="btn btn-warning m-3">Buy Now</button>
+        <button class="panda-buying-btn m-3">Buy Now</button>
       </div>
     </div>
   </div>
@@ -167,19 +172,90 @@
         <p class="card-text"> This is a wider card with supporting text below as a natural lead-in to additional.</p>
       </div>
       <div >
-        <button class="btn btn-warning m-3">Buy Now</button>
+        <button class="panda-buying-btn m-3">Buy Now</button>
       </div>
     </div>
   </div>
 </div>
 </section>
+<!--+++++++++++++++++++++++Shoes END +++++++++++++++++++++++++++++ -->
 
 
 
-<!--+++++++++++++++++++++++Products card section END+++++++++++++++++++++++++++++ -->
+
+
+
+<!--+++++++++++++++++++++++Backpacks START +++++++++++++++++++++++++++++ -->
+<section class="container my-5 py-5" id="Backpacks">
+    <h2 class="my-2">Backpacks</h2>
+  <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+  <div class="col">
+    <div class="card h-100 border-0 shadow-lg">
+      <img src="img/images/bags/bag-1.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Red Hunt Bag</h5>
+        <h5 class="card-title">$120</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      </div>
+      <div>
+       <button class="panda-buying-btn m-3">Buy Now</button>
+      </div>
+    </div>
+  </div>
+  <div class="col ">
+    <div class="card h-100 border-0 shadow-lg">
+      <img src="img/images/bags/bag-2.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Blue Dragon Bag</h5>
+        <h5 class="card-title">$320</h5>
+        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+      </div>
+      <div>
+        <button class="panda-buying-btn m-3">Buy Now</button>
+      </div>
+    </div>
+  </div>
+  <div class="col ">
+    <div class="card h-100 border-0 shadow-lg">
+      <img src="img/images/bags/bag-3.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Black Bear Bag</h5>
+        <h5 class="card-title">$169</h5>
+        <p class="card-text"> This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+      </div>
+      <div >
+        <button class="panda-buying-btn m-3">Buy Now</button>
+      </div>
+    </div>
+  </div>
+</div>
+</section>
+<!--+++++++++++++++++++++++Backpacks END +++++++++++++++++++++++++++++ -->
+
+<!--+++++++++++++++++++++++Products card section END+++++++++++++++++++++++++++++ 
+++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-->
+
+
+
+
+<!-- +++++++++++++++++++++++++++Suscribe section START+++++++++++++++++++++-->
+  <section class="container d-flex justify-content-center align-items-center slider-bg rounded-3 my-5" style="height: 300px;" id="Suscribe">
+    <div class="">
+      <h1>LET'S STAY IN TOUCH</h1>
+    <p>Get updates on sales, specials and more</p>
+    <input  class="form-control" type="email" placeholder="Your Email"><br>
+    <button class="panda-buying-btn">SUBMIT</button>
+    </div>
+  </section>
+<!-- +++++++++++++++++++++++++++Suscribe section START+++++++++++++++++++++-->
+
   </main>
+
+
+
 <!--++++++++++++++++++++++++++ Footer START+++++++++++++++++++++++++++++ -->
-  <footer>
+  <footer class="mt-5  pt-5 text-center">
+    <p><small><i>©2020. Panda Commerce. All rights reserved.Shourav Raj B.</i></small></p>
 
   </footer>
 <!--++++++++++++++++++++++++++ Footer END+++++++++++++++++++++++++++++ -->
